syntax = "proto3";

import "pbmse/v1/pbmse.proto";

package okapi.examples.v1;

option csharp_namespace = "Okapi.Examples.V1";
option go_package = "okapi/examples/v1/examples";
option java_package = "trinsic.okapi.examples.v1";

message BasicMessage {
    string text = 1;
}

service SecureExampleService {
    rpc Unary(pbmse.v1.EncryptedMessage) returns (pbmse.v1.EncryptedMessage);

    rpc ServerStreaming(pbmse.v1.EncryptedMessage) returns (stream pbmse.v1.EncryptedMessage);
}